# scholar-helper

./: .flake8  .gitignore  requirements.txt
.devcontainer/: devcontainer.json
scholar-helper/: .env.example  .gitignore  README.md  app.py  merge_steps.md  planning_doc  project_summary  pyproject.toml  requirements.txt
scholar-helper/scholar_helper/cli/: __init__.py
scholar-helper/scholar_helper/models/: types.py
scholar-helper/scholar_helper/services/: api.py  storage.py
splinterlands-tools/: .gitignore  Tournament_Series.md  account_rewards_refactor.md  app.py  pyproject.toml  requirements.txt
splinterlands-tools/core/: config.py  home.py
splinterlands-tools/features/brawl/: service.py
splinterlands-tools/features/scholar/: service.py
splinterlands-tools/pages/: 01_Home.py  10_Brawl_Dashboard.py  20_Rewards_Tracker.py  20_Scholar_Helper.py  30_SPS_Analytics.py  30_Series_Hub.py  30_Tournament_Series.py  31_Series_Leaderboard.py
splinterlands-tools/pages/series/: 31_Series_Leaderboard.py
splinterlands-tools/scholar_helper/models/: __init__.py
splinterlands-tools/scholar_helper/services/: api.py  brawl_dashboard.py  storage.py
splinterlands-tools/scripts/: refresh_tournaments.py  season_sync.py
splinterlands-tools/series/: leaderboard.py  tournament.py
splinterlands-tools/supabase/migrations/: 20251213090500_add_insert_series_config_function.sql
src/api/: spl.py
